--- a/index.html
+++ b/index.html
@@ -55,32 +55,29 @@
     </div>
     <!-- Spinner End -->
 
-    <!-- Navbar Start -->
-    <nav
-      class="navbar navbar-expand-lg bg-secondary navbar-dark sticky-top py-lg-0 px-lg-5 wow fadeIn"
-      data-wow-delay="0.1s"
-    >
-      <a href="index.html" class="navbar-brand ms-4 ms-lg-0">
-        <img
-          src="images/Kani-kanea.png"
-          alt="Kani Kanea Logo"
-          class="img-fluid logo"
-        />
-      </a>
-      <button
-        type="button"
-        class="navbar-toggler me-4"
-        data-bs-toggle="collapse"
-        data-bs-target="#navbarCollapse"
+    <!-- Navbar & Hero Start -->
+    <div class="container-fluid nav-bar p-0">
+      <nav
+        class="navbar navbar-expand-lg navbar-dark bg-secondary px-3 px-lg-5 py-3 py-lg-0"
       >
-        <span class="navbar-toggler-icon"></span>
-      </button>
-      <div class="collapse navbar-collapse" id="navbarCollapse">
-        <div class="navbar-nav ms-auto p-4 p-lg-0">
-          <a href="index.html" class="nav-item nav-link active">Home</a>
-          <a href="about.html" class="nav-item nav-link">About</a>
-          <a href="service.html" class="nav-item nav-link">Service</a>
-          <!-- <div class="nav-item dropdown">
+        <a href="index.html" class="navbar-brand p-0">
+          <img src="images/Kani-kanea.png" alt="Logo" class="logo img-fluid" />
+        </a>
+        <button
+          class="navbar-toggler"
+          type="button"
+          data-bs-toggle="collapse"
+          data-bs-target="#navbarCollapse"
+        >
+          <span class="fa fa-bars"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarCollapse">
+          <div class="navbar-nav ms-auto py-0">
+            <a href="index.html" class="nav-item nav-link active">Home</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
+            <a href="film.html" class="nav-item nav-link">Films</a>
+            <a href="contact.html" class="nav-item nav-link">Contact</a>
+            <!-- <div class="nav-item dropdown">
             <a
               href="#"
               class="nav-link dropdown-toggle"
@@ -95,16 +92,16 @@
               <a href="404.html" class="dropdown-item">404 Page</a>
             </div>
           </div> -->
-          <a href="contact.html" class="nav-item nav-link">Contact</a>
+          </div>
+          <a
+            href=""
+            class="btn btn-primary border-secondary rounded py-2 px-4 px-lg-3 mb-3 mb-md-3 mb-lg-0"
+            >Explore our films</a
+          >
         </div>
-        <a
-          href=""
-          class="btn btn-primary rounded-0 py-2 px-lg-4 d-none d-lg-block"
-          >Explore our Films<i class="fa fa-arrow-right ms-3"></i
-        ></a>
-      </div>
-    </nav>
-    <!-- Navbar End -->
+      </nav>
+    </div>
+    <!-- Navbar & Hero End -->
 
     <!-- Carousel Start -->
     <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
