--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
     <!-- Navbar & Hero Start -->
     <div class="container-fluid nav-bar p-0">
       <nav
-        class="navbar navbar-expand-lg navbar-dark bg-secondary px-3 px-lg-5 py-3 py-lg-0"
+        class="navbar navbar-expand-lg navbar-dark bg-secondary px-3 px-lg-5"
       >
         <a href="index.html" class="navbar-brand p-0">
           <img src="images/Kani-kanea.png" alt="Logo" class="logo img-fluid" />
