--- a/index.html
+++ b/index.html
@@ -194,14 +194,10 @@
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
             <div class="d-flex flex-column">
               <img
-                class="img-fluid w-75 align-self-end"
+                class="img-fluid align-self-end"
                 src="images/creatives-meeting.jpeg"
                 alt="Kani Kanea Creatives"
               />
-              <div class="w-50 bg-secondary p-5" style="margin-top: -25%">
-                <h1 class="text-uppercase text-primary mb-3">10+ Years</h1>
-                <h2 class="text-uppercase mb-0">Of Creative Excellence</h2>
-              </div>
             </div>
           </div>
           <!-- Right Column: Text Content -->
@@ -227,15 +223,16 @@
             <div class="row g-4">
               <!-- Highlight 1 -->
               <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">Since 2013</h3>
+                <h3 class="text-uppercase mb-3">A Legacy of Innovation</h3>
                 <p class="mb-0">
-                  For over a decade, we've been driving creativity and
-                  innovation, helping brands make their mark.
+                  For years, We've been empowering brands with innovative
+                  solutions, creating meaningful impacts that last.
                 </p>
               </div>
+
               <!-- Highlight 2 -->
               <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">100+ Projects</h3>
+                <h3 class="text-uppercase mb-3">50+ Projects</h3>
                 <p class="mb-0">
                   Successfully delivered creative projects for businesses across
                   various industries, building trust and lasting impact.
