--- a/index.html
+++ b/index.html
@@ -467,24 +467,12 @@
           </div>
           <!-- Newsletter -->
           <div class="col-lg-4 col-md-6">
-            <h4 class="text-uppercase mb-4">Newsletter</h4>
+            <h4 class="text-uppercase mb-4">Our Story, Your Story</h4>
             <p>
-              Stay updated with the latest news and insights from Kani Kanea
-              Creatives. Subscribe to our newsletter today!
+              "Stories are the threads that connect us all. At Kani Kanea
+              Creatives, we believe in crafting narratives that inspire, engage,
+              and transform."
             </p>
-            <div class="position-relative mb-4">
-              <input
-                class="form-control border-0 w-100 py-3 ps-4 pe-5"
-                type="text"
-                placeholder="Your email"
-              />
-              <button
-                type="button"
-                class="btn btn-primary py-2 position-absolute top-0 end-0 mt-2 me-2"
-              >
-                SignUp
-              </button>
-            </div>
             <!-- Social Media Links -->
             <div class="d-flex pt-1 m-n1">
               <a
