--- a/index.html
+++ b/index.html
@@ -96,7 +96,7 @@
           <a
             href=""
             class="btn btn-primary border-secondary rounded py-2 px-4 px-lg-3 mb-3 mb-md-3 mb-lg-0"
-            >Explore our films</a
+            >Explore our projects</a
           >
         </div>
       </nav>
@@ -104,16 +104,23 @@
     <!-- Navbar & Hero End -->
 
     <!-- Carousel Start -->
-    <div class="container-fluid p-0 mb-5 wow fadeIn" data-wow-delay="0.1s">
+    <div
+      class="container-fluid container-video p-0 mb-5 wow fadeIn"
+      data-wow-delay="0.1s"
+    >
+      <!-- Fixed Background Video -->
+      <div class="fixed-video-background">
+        <video autoplay muted loop playsinline>
+          <!-- Replace this source URL with your actual video file -->
+          <source src="images/sdk-video.mp4" type="video/mp4" />
+          Your browser does not support the video tag.
+        </video>
+      </div>
+
       <div id="header-carousel" class="carousel slide" data-bs-ride="carousel">
         <div class="carousel-inner">
           <!-- Slide 1 -->
           <div class="carousel-item active">
-            <img
-              class="w-100"
-              src="img/carousel-1.jpg"
-              alt="Creative Content"
-            />
             <div
               class="carousel-caption d-flex align-items-center justify-content-center text-start"
             >
@@ -134,13 +141,9 @@
               </div>
             </div>
           </div>
+
           <!-- Slide 2 -->
           <div class="carousel-item">
-            <img
-              class="w-100"
-              src="img/carousel-2.jpg"
-              alt="Digital Solutions"
-            />
             <div
               class="carousel-caption d-flex align-items-center justify-content-center text-start"
             >
@@ -162,6 +165,7 @@
             </div>
           </div>
         </div>
+
         <!-- Carousel Controls -->
         <button
           class="carousel-control-prev"
