updated services section

--- a/index.html
+++ b/index.html
@@ -187,7 +187,6 @@
         </button>
       </div>
     </div>
-
     <!-- Carousel End -->
 
     <!-- About Start -->
@@ -196,7 +195,7 @@
         <div class="row g-5">
           <!-- Left Column: Image and Experience -->
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <div class="d-flex flex-column">
+            <div class="d-flex flex-column h-100">
               <img
                 class="img-fluid align-self-end"
                 src="images/creatives-meeting.jpeg"
@@ -276,10 +275,12 @@
                 <i class="fas fa-pencil-alt text-primary fa-2x"></i>
               </div>
               <div class="ps-4">
-                <h3 class="text-uppercase mb-3">Creative Content</h3>
+                <h3 class="text-uppercase mb-3">Content Creation</h3>
                 <p>
-                  From compelling storytelling to visual narratives, we create
-                  content that captures and captivates your audience.
+                  From captivating storytelling to stunning visual narratives,
+                  we craft content that inspires and engages. Whether it’s
+                  films, commercials, recipes, or short stories, our creations
+                  leave a lasting impression on your audience.
                 </p>
               </div>
             </div>
@@ -296,10 +297,12 @@
                 <i class="fas fa-video text-primary fa-2x"></i>
               </div>
               <div class="ps-4">
-                <h3 class="text-uppercase mb-3">Video Production</h3>
+                <h3 class="text-uppercase mb-3">Digital Brand Management</h3>
                 <p>
-                  High-quality video production services to bring your ideas to
-                  life with precision and creativity.
+                  Elevate your brand's digital presence with strategies that
+                  resonate. From social media campaigns to online reputation
+                  management, we craft solutions that build, enhance, and
+                  sustain your brand's identity in the digital space.
                 </p>
               </div>
             </div>
@@ -318,8 +321,11 @@
               <div class="ps-4">
                 <h3 class="text-uppercase mb-3">Digital Marketing</h3>
                 <p>
-                  Boost your online presence with tailored digital campaigns,
-                  SEO, and social media strategies.
+                  Drive your brand's growth in the digital space. From social
+                  media strategies to search engine optimization, email
+                  campaigns, and performance analytics, we create impactful
+                  digital marketing solutions that connect you with your
+                  audience and deliver results.
                 </p>
               </div>
             </div>
@@ -336,10 +342,15 @@
                 <i class="fas fa-users text-primary fa-2x"></i>
               </div>
               <div class="ps-4">
-                <h3 class="text-uppercase mb-3">Brand Consultancy</h3>
+                <h3 class="text-uppercase mb-3">
+                  Talent & Creative Management
+                </h3>
                 <p>
-                  Offering expert advice to help define and develop your brand
-                  identity in a competitive market.
+                  We nurture and showcase exceptional talent, managing every
+                  aspect of their creative journey. From strategic brand
+                  collaborations to personal branding, we empower creatives to
+                  reach their full potential and connect meaningfully with their
+                  audience.
                 </p>
               </div>
             </div>
@@ -358,8 +369,10 @@
               <div class="ps-4">
                 <h3 class="text-uppercase mb-3">Campaign Strategy</h3>
                 <p>
-                  Develop and execute impactful marketing campaigns to ensure
-                  your message reaches the right audience.
+                  We design and execute impactful marketing campaigns that
+                  deliver your message to the right audience with precision and
+                  creativity, driving meaningful engagement and measurable
+                  results.
                 </p>
               </div>
             </div>
@@ -376,11 +389,12 @@
                 <i class="fas fa-search text-primary fa-2x"></i>
               </div>
               <div class="ps-4">
-                <h3 class="text-uppercase mb-3">SEO</h3>
+                <h3 class="text-uppercase mb-3">Advertising</h3>
                 <p>
-                  Optimize your online presence with our SEO strategies,
-                  ensuring your brand ranks higher and reaches the right
-                  audience.
+                  Reach your audience where it matters most. From impactful
+                  billboard designs to compelling TV commercials and engaging
+                  radio spots, we craft advertising campaigns that deliver your
+                  message with precision and creativity.
                 </p>
               </div>
             </div>
