--- a/index.html
+++ b/index.html
@@ -55,7 +55,7 @@
     </div>
     <!-- Spinner End -->
 
-    <!-- Navbar & Hero Start -->
+    <!-- Navbar  -->
     <div class="container-fluid nav-bar p-0">
       <nav
         class="navbar navbar-expand-lg navbar-dark bg-secondary px-3 px-lg-5"
@@ -101,10 +101,10 @@
         </div>
       </nav>
     </div>
-    <!-- Navbar & Hero End -->
+    <!-- Navbar -->
 
     <!-- Carousel Start -->
-    <div
+    <section
       class="container-fluid container-video p-0 mb-5 wow fadeIn"
       data-wow-delay="0.1s"
     >
@@ -186,11 +186,11 @@
           <span class="visually-hidden">Next</span>
         </button>
       </div>
-    </div>
+    </section>
     <!-- Carousel End -->
 
     <!-- About Start -->
-    <div class="container-xxl py-5">
+    <section class="container-xxl py-5">
       <div class="container">
         <div class="row g-5">
           <!-- Left Column: Image and Experience -->
@@ -245,12 +245,11 @@
           </div>
         </div>
       </div>
-    </div>
-
+    </section>
     <!-- About End -->
 
     <!-- Service Start -->
-    <div class="container-xxl py-5">
+    <section class="container-xxl py-5">
       <div class="container">
         <div
           class="text-center mx-auto mb-5 wow fadeInUp"
@@ -401,11 +400,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- Service End -->
 
     <!-- Why Choose Us Start -->
-    <div class="container-xxl py-5">
+    <section class="container-xxl py-5">
       <div class="container">
         <div class="row g-5">
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
@@ -443,11 +442,11 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- Why Choose Us End -->
 
     <!-- Footer Start -->
-    <div
+    <footer
       class="container-fluid bg-secondary text-light footer mt-5 pt-5 wow fadeIn"
       data-wow-delay="0.1s"
     >
@@ -478,10 +477,10 @@
           <!-- Quick Links -->
           <div class="col-lg-4 col-md-6">
             <h4 class="text-uppercase mb-4">Quick Links</h4>
+            <a class="btn btn-link" href="index.html">Home</a>
             <a class="btn btn-link" href="about.html">About Us</a>
             <a class="btn btn-link" href="contact.html">Contact Us</a>
-            <a class="btn btn-link" href="services.html">Our Services</a>
-            <a class="btn btn-link" href="portfolio.html">Portfolio</a>
+            <a class="btn btn-link" href="project.html">Our Projects</a>
           </div>
           <!-- Newsletter -->
           <div class="col-lg-4 col-md-6">
@@ -540,7 +539,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </footer>
     <!-- Footer End -->
 
     <!-- Back to Top -->
