update: contact us page

--- a/contact.html
+++ b/contact.html
@@ -74,24 +74,24 @@
         <div class="collapse navbar-collapse" id="navbarCollapse">
           <div class="navbar-nav ms-auto py-0">
             <a href="index.html" class="nav-item nav-link">Home</a>
-            <a href="about.html" class="nav-item nav-link active">About</a>
+            <a href="about.html" class="nav-item nav-link">About</a>
             <a href="film.html" class="nav-item nav-link">Films</a>
-            <a href="contact.html" class="nav-item nav-link">Contact</a>
+            <a href="contact.html" class="nav-item nav-link active">Contact</a>
             <!-- <div class="nav-item dropdown">
-              <a
-                href="#"
-                class="nav-link dropdown-toggle"
-                data-bs-toggle="dropdown"
-                >Pages</a
-              >
-              <div class="dropdown-menu m-0">
-                <a href="price.html" class="dropdown-item">Pricing Plan</a>
-                <a href="team.html" class="dropdown-item">Our Barber</a>
-                <a href="open.html" class="dropdown-item">Working Hours</a>
-                <a href="testimonial.html" class="dropdown-item">Testimonial</a>
-                <a href="404.html" class="dropdown-item">404 Page</a>
-              </div>
-            </div> -->
+                <a
+                  href="#"
+                  class="nav-link dropdown-toggle"
+                  data-bs-toggle="dropdown"
+                  >Pages</a
+                >
+                <div class="dropdown-menu m-0">
+                  <a href="price.html" class="dropdown-item">Pricing Plan</a>
+                  <a href="team.html" class="dropdown-item">Our Barber</a>
+                  <a href="open.html" class="dropdown-item">Working Hours</a>
+                  <a href="testimonial.html" class="dropdown-item">Testimonial</a>
+                  <a href="404.html" class="dropdown-item">404 Page</a>
+                </div>
+              </div> -->
           </div>
           <a
             href="project.html"
@@ -112,7 +112,7 @@
         <h1
           class="display-3 text-white text-uppercase mb-3 animated slideInDown"
         >
-          About
+          Contact
         </h1>
         <nav aria-label="breadcrumb animated slideInDown">
           <ol class="breadcrumb justify-content-center text-uppercase mb-0">
@@ -120,7 +120,7 @@
               <a class="text-white" href="#">Home</a>
             </li>
             <li class="breadcrumb-item text-primary active" aria-current="page">
-              About
+              Contact
             </li>
           </ol>
         </nav>
@@ -128,92 +128,121 @@
     </div>
     <!-- Page Header End -->
 
-    <!-- About Start -->
-    <section class="container-xxl py-5">
+    <!-- Contact Start -->
+    <div class="container-xxl py-5">
       <div class="container">
-        <div class="row g-5">
-          <!-- Right Column: Text Content -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
-            <p class="d-inline-block bg-secondary text-primary py-1 px-4">
-              About Us
-            </p>
-            <h1 class="text-uppercase mb-4">
-              Crafting Stories, Shaping Experiences
-            </h1>
-            <p>
-              Kani Kanea Creatives is more than just a creative agency—we are a
-              collective of storytellers, strategists, and innovators passionate
-              about bringing ideas to life. Founded with a vision to bridge
-              creativity and strategy, we specialize in creating transformative
-              brand experiences that leave a lasting impression.
-            </p>
-            <p>
-              From captivating video production to data-driven digital
-              campaigns, we partner with businesses to deliver solutions that
-              resonate. With a deep understanding of emerging trends and
-              consumer behavior, we help brands connect authentically with their
-              audiences across all touchpoints.
-            </p>
-            <p class="mb-4">
-              Our team’s expertise spans diverse creative fields, including
-              content creation, brand strategy, advertising, and talent
-              management. Whether you’re launching a new product, refreshing
-              your brand identity, or expanding your digital presence, we’re
-              here to help you tell your story with impact.
-            </p>
-            <div class="row g-4">
-              <!-- Highlight 1 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">Our Mission</h3>
-                <p class="mb-0">
-                  To empower brands and creators by crafting stories and
-                  solutions that inspire, engage, and drive growth.
-                </p>
-              </div>
-
-              <!-- Highlight 2 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">Our Vision</h3>
-                <p class="mb-0">
-                  To be a global leader in creative storytelling and innovative
-                  brand solutions, shaping the future of marketing and design.
-                </p>
-              </div>
-
-              <!-- Highlight 3 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">A Proven Track Record</h3>
-                <p class="mb-0">
-                  Over 50+ successful projects spanning industries, showcasing
-                  our ability to adapt, innovate, and deliver results.
-                </p>
-              </div>
-
-              <!-- Highlight 4 -->
-              <div class="col-md-6">
-                <h3 class="text-uppercase mb-3">Client-Centered Approach</h3>
-                <p class="mb-0">
-                  Every partnership is built on collaboration, transparency, and
-                  a commitment to achieving your unique goals.
-                </p>
-              </div>
+        <div class="row g-0">
+          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
+            <div class="bg-secondary px-md-5">
+              <p class="d-inline-block bg-dark text-primary py-1 px-4">
+                Contact Us
+              </p>
+              <h1 class="text-uppercase mb-4">
+                Get in Touch with Kani Kanea Creatives!
+              </h1>
+              <p class="mb-4">
+                We're here to answer your questions and assist you with your
+                projects. Reach out to us today for personalized solutions that
+                elevate your brand!
+              </p>
+              <p class="mb-4">
+                <strong>Phone:</strong>
+                <a href="tel:+233502009118" class="text-primary"
+                  >+233 50 200 9118</a
+                >
+                <br />
+                <strong>Email:</strong>
+                <a
+                  href="mailto:kanikaneacreatives@gmail.com"
+                  class="text-primary"
+                  >kanikaneacreatives@gmail.com</a
+                >
+              </p>
+              <form
+                action="https://formspree.io/f/{your-form-id}"
+                method="POST"
+              >
+                <div class="row g-3">
+                  <div class="col-md-6">
+                    <div class="form-floating">
+                      <input
+                        type="text"
+                        name="name"
+                        class="form-control bg-transparent"
+                        id="name"
+                        placeholder="Your Name"
+                        required
+                      />
+                      <label for="name">Your Name</label>
+                    </div>
+                  </div>
+                  <div class="col-md-6">
+                    <div class="form-floating">
+                      <input
+                        type="email"
+                        name="email"
+                        class="form-control bg-transparent"
+                        id="email"
+                        placeholder="Your Email"
+                        required
+                      />
+                      <label for="email">Your Email</label>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-floating">
+                      <input
+                        type="text"
+                        name="subject"
+                        class="form-control bg-transparent"
+                        id="subject"
+                        placeholder="Subject"
+                      />
+                      <label for="subject">Subject</label>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <div class="form-floating">
+                      <textarea
+                        name="message"
+                        class="form-control bg-transparent"
+                        placeholder="Leave a message here"
+                        id="message"
+                        style="height: 100px"
+                        required
+                      ></textarea>
+                      <label for="message">Message</label>
+                    </div>
+                  </div>
+                  <div class="col-12">
+                    <button class="btn btn-primary w-100 py-3" type="submit">
+                      Send Message
+                    </button>
+                  </div>
+                </div>
+              </form>
             </div>
           </div>
-
-          <!-- Left Column: Image -->
-          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <div class="d-flex flex-column h-100">
-              <img
-                class="img-fluid align-self-end"
-                src="images/creatives-meeting.jpeg"
-                alt="Kani Kanea Creatives"
-              />
+          <div class="col-lg-6 wow fadeIn" data-wow-delay="0.5s">
+            <div class="h-100" style="min-height: 400px">
+              <iframe
+                class="google-map w-100 h-100"
+                src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d391815.9999999999!2d-0.201711!3d5.603716!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xfdf9ae1c4a0df29%3A0x37c1f377fdb8bd2e!2sAccra%2C%20Ghana!5e0!3m2!1sen!2sgh!4v1603794290143!5m2!1sen!2sgh"
+                frameborder="0"
+                allowfullscreen=""
+                aria-hidden="false"
+                tabindex="0"
+                style="
+                  filter: grayscale(100%) invert(92%) contrast(83%);
+                  border: 0;
+                "
+              ></iframe>
             </div>
           </div>
         </div>
       </div>
-    </section>
-    <!-- About End -->
+    </div>
+    <!-- Contact End -->
 
     <!-- Footer Start -->
     <footer
