--- a/index.html
+++ b/index.html
@@ -94,7 +94,7 @@
           </div> -->
           </div>
           <a
-            href=""
+            href="project.html"
             class="btn btn-primary border-secondary rounded py-2 px-4 px-lg-3 mb-3 mb-md-3 mb-lg-0"
             >Explore our projects</a
           >
@@ -515,6 +515,12 @@
                 href="https://tiktok.com/@kanikaneacreatives"
                 target="_blank"
                 ><i class="fab fa-angellist"></i
+              ></a>
+              <a
+                class="btn btn-lg-square btn-dark text-primary m-1"
+                href="https://instagram.com/KaniKaneaCreatives"
+                target="_blank"
+                ><i class="fab fa-instagram"></i
               ></a>
             </div>
           </div>
