modified index about section

--- a/index.html
+++ b/index.html
@@ -212,17 +212,26 @@
               Transforming Ideas Into Impactful Narratives
             </h1>
             <p>
-              At Kani Kanea Creatives, we are a team of storytellers,
-              strategists, and visionaries dedicated to helping brands connect
-              with their audiences. Our expertise spans content creation,
-              high-quality production, and innovative digital solutions.
+              At <strong>Kani Kanea Creatives</strong>, we are a team of
+              storytellers, strategists, and visionaries dedicated to helping
+              brands connect with their audiences. Our expertise spans content
+              creation, high-quality production, and innovative digital
+              solutions.
             </p>
             <p class="mb-4">
               From conceptualizing compelling campaigns to delivering top-tier
               video production, we empower businesses to share their stories
-              with impact. With a focus on authenticity and creativity, we
-              ensure your brand stands out in an ever-evolving market.
+              with impact. Our team of experts collaborates closely with clients
+              to understand their unique goals, challenges, and audiences,
+              ensuring every project is tailored to perfection. With a focus on
+              authenticity and creativity, we craft narratives that resonate,
+              evoke emotion, and drive engagement. Leveraging the latest
+              technologies and industry insights, we ensure your brand not only
+              stands out but also establishes a meaningful connection with its
+              audience. In an ever-evolving market, our commitment to innovation
+              and excellence positions your business for lasting success.
             </p>
+
             <div class="row g-4">
               <!-- Highlight 1 -->
               <div class="col-md-6">
