updated meta tags for SEO

--- a/about.html
+++ b/about.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <title>Kani Kanea</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta
+      content="About Kani Kanea Creatives, Creative Agency in Accra, Video Production, Digital Marketing, Content Creation, Branding"
+      name="keywords"
+    />
+    <meta
+      content="Learn more about Kani Kanea Creatives, a premier creative agency based in Accra, Ghana. Discover our story, values, and expertise in video production, digital marketing, content creation, and branding services."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="images/Kani-kanea-logo.png" rel="icon" />
