--- a/contact.html
+++ b/contact.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <title>Kani Kanea</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta
+      content="Contact Kani Kanea Creatives, Creative Agency in Accra, Ghana, Get in Touch, Video Production, Digital Marketing, Content Creation"
+      name="keywords"
+    />
+    <meta
+      content="Get in touch with Kani Kanea Creatives, a leading creative agency in Accra, Ghana. Contact us for inquiries about video production, digital marketing, content creation, branding, and more. We're here to help you achieve your goals."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="images/Kani-kanea-logo.png" rel="icon" />
