--- a/film.html
+++ b/film.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" />
     <title>Kani Kanea</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta
+      content="Kani Kanea Films, Creative Video Production, Cinematic Storytelling, Film Production in Accra, Ghana, Branded Content, Documentaries, Commercials"
+      name="keywords"
+    />
+    <meta
+      content="Explore the world of Kani Kanea Films, where creativity meets cinematic storytelling. Based in Accra, Ghana, we specialize in film production, branded content, documentaries, commercials, and visual storytelling that captivates and inspires."
+      name="description"
+    />
+    />
 
     <!-- Favicon -->
     <link href="images/Kani-kanea-logo.png" rel="icon" />
