--- a/project.html
+++ b/project.html
@@ -4,8 +4,15 @@
     <meta charset="utf-8" />
     <title>Kani Kanea</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <!-- Meta Tags for Projects Page -->
+    <meta
+      content="creative projects, branding projects, digital marketing, video production, advertising, design, marketing campaigns, creative solutions, content creation"
+      name="keywords"
+    />
+    <meta
+      content="Explore our diverse range of successful projects at Kani Kanea Creatives. From branding and digital marketing to content creation and advertising, we bring your ideas to life with creativity and innovation."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="images/Kani-kanea-logo.png" rel="icon" />
