--- a/index.html
+++ b/index.html
@@ -4,8 +4,14 @@
     <meta charset="utf-8" />
     <title>Kani Kanea</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
-    <meta content="" name="keywords" />
-    <meta content="" name="description" />
+    <meta
+      content="Creative Agency, Video Production, Digital Marketing, Content Creation, Branding, Accra, Ghana"
+      name="keywords"
+    />
+    <meta
+      content="Kani Kanea Creatives is a leading creative agency based in Accra, Ghana. We specialize in video production, digital marketing, content creation, and branding services to help businesses tell their stories and connect with audiences effectively."
+      name="description"
+    />
 
     <!-- Favicon -->
     <link href="images/Kani-kanea-logo.png" rel="icon" />
