structured data added

--- a/film.html
+++ b/film.html
@@ -44,6 +44,34 @@
 
     <!-- Template Stylesheet -->
     <link href="css/style.css" rel="stylesheet" />
+
+    <!-- structured data -->
+    <script type="application/ld+json">
+      {
+        "@context": "https://schema.org",
+        "@type": "Organization",
+        "name": "Kani Kanea Creatives",
+        "description": "Kani Kanea Creatives is a leading creative agency in Accra, Ghana, specializing in video production, content creation, branding, and digital marketing.",
+        "url": "https://www.kanikaneacreatives.com",
+        "logo": "https://www.kanikaneacreatives.com/images/Kani-kanea-logo.png",
+        "address": {
+          "@type": "PostalAddress",
+          "addressLocality": "Accra",
+          "addressCountry": "GH"
+        },
+        "contactPoint": {
+          "@type": "ContactPoint",
+          "telephone": "+233502009118",
+          "contactType": "Customer Service"
+        },
+        "sameAs": [
+          "https://www.facebook.com/kanikaneacreatives",
+          "https://x.com/Kanikanea",
+          "https://instagram.com/kanikaneacreatives",
+          "https://www.youtube.com/@KaniKaneaCreatives"
+        ]
+      }
+    </script>
   </head>
 
   <body>
