meta update for SEO

--- a/film.html
+++ b/film.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Kani Kanea</title>
+    <title>Kani Kanea Creatives</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       content="Kani Kanea Films, Creative Video Production, Cinematic Storytelling, Film Production in Accra, Ghana, Branded Content, Documentaries, Commercials"
@@ -11,7 +11,6 @@
     <meta
       content="Explore the world of Kani Kanea Films, where creativity meets cinematic storytelling. Based in Accra, Ghana, we specialize in film production, branded content, documentaries, commercials, and visual storytelling that captivates and inspires."
       name="description"
-    />
     />
 
     <!-- Favicon -->
@@ -164,7 +163,7 @@
     <!-- Page Header End -->
 
     <!-- Projects Start -->
-    <div class="container-xxl py-5">
+    <section class="container-xxl py-5">
       <div class="container">
         <div
           class="text-center mx-auto mb-5 wow fadeInUp"
@@ -224,7 +223,7 @@
           </div>
         </div>
       </div>
-    </div>
+    </section>
     <!-- Projects End -->
 
     <!-- Footer Start -->
