--- a/contact.html
+++ b/contact.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Kani Kanea</title>
+    <title>Kani Kanea Creatives</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       content="Contact Kani Kanea Creatives, Creative Agency in Accra, Ghana, Get in Touch, Video Production, Digital Marketing, Content Creation"
