--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
   <head>
     <meta charset="utf-8" />
-    <title>Kani Kanea</title>
+    <title>Kani Kanea Creatives</title>
     <meta content="width=device-width, initial-scale=1.0" name="viewport" />
     <meta
       content="Creative Agency, Video Production, Digital Marketing, Content Creation, Branding, Accra, Ghana"
