--- a/contact.html
+++ b/contact.html
@@ -139,7 +139,7 @@
       <div class="container">
         <div class="row g-0">
           <div class="col-lg-6 wow fadeIn" data-wow-delay="0.1s">
-            <div class="bg-secondary px-md-5">
+            <div class="bg-secondary px-2 px-md-5">
               <p class="d-inline-block bg-dark text-primary py-1 px-4">
                 Contact Us
               </p>
