--- a/index.html
+++ b/index.html
@@ -291,10 +291,17 @@
               <div class="ps-4">
                 <h3 class="text-uppercase mb-3">Content Creation</h3>
                 <p>
-                  From captivating storytelling to stunning visual narratives,
-                  we craft content that inspires and engages. Whether it’s
-                  films, commercials, recipes, or short stories, our creations
-                  leave a lasting impression on your audience.
+                  Our multifaceted approach to content creation encompasses
+                  compelling narratives and visually striking presentations
+                  designed to captivate and resonate with audiences. We
+                  specialize in producing a diverse array of media, including
+                  cinematic productions, advertising campaigns, culinary
+                  content, and literary works, all meticulously crafted to leave
+                  an indelible impact on viewers and readers alike. Our team's
+                  expertise lies in developing immersive experiences that not
+                  only engage but also inspire, ensuring that each project we
+                  undertake delivers exceptional value and lasting resonance for
+                  our clients' target demographics.
                 </p>
               </div>
             </div>
@@ -311,39 +318,27 @@
                 <i class="fas fa-video text-primary fa-2x"></i>
               </div>
               <div class="ps-4">
-                <h3 class="text-uppercase mb-3">Digital Brand Management</h3>
+                <h3 class="text-uppercase mb-3">
+                  Digital Brand Management & Marketing
+                </h3>
                 <p>
-                  Elevate your brand's digital presence with strategies that
-                  resonate. From social media campaigns to online reputation
-                  management, we craft solutions that build, enhance, and
-                  sustain your brand's identity in the digital space.
+                  Enhance your organization's digital footprint through
+                  meticulously crafted strategies designed to captivate your
+                  target audience. Our comprehensive suite of services
+                  encompasses cutting-edge social media initiatives and
+                  sophisticated online reputation management techniques. We
+                  specialize in developing bespoke solutions that not only
+                  establish but also amplify and maintain your brand's
+                  distinctive identity within the ever-evolving digital
+                  landscape. By leveraging data-driven insights and industry
+                  best practices, we ensure that your brand's message resonates
+                  powerfully across all digital touchpoints, fostering
+                  meaningful engagement and driving sustainable growth.
                 </p>
               </div>
             </div>
           </div>
-          <!-- Service 3 -->
-          <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.5s">
-            <div
-              class="service-item position-relative overflow-hidden bg-secondary d-flex h-100 p-5 ps-0"
-            >
-              <div
-                class="bg-dark d-flex flex-shrink-0 align-items-center justify-content-center"
-                style="width: 60px; height: 60px"
-              >
-                <i class="fas fa-chart-line text-primary fa-2x"></i>
-              </div>
-              <div class="ps-4">
-                <h3 class="text-uppercase mb-3">Digital Marketing</h3>
-                <p>
-                  Drive your brand's growth in the digital space. From social
-                  media strategies to search engine optimization, email
-                  campaigns, and performance analytics, we create impactful
-                  digital marketing solutions that connect you with your
-                  audience and deliver results.
-                </p>
-              </div>
-            </div>
-          </div>
+
           <!-- Service 4 -->
           <div class="col-lg-4 col-md-6 wow fadeInUp" data-wow-delay="0.1s">
             <div
@@ -356,9 +351,7 @@
                 <i class="fas fa-users text-primary fa-2x"></i>
               </div>
               <div class="ps-4">
-                <h3 class="text-uppercase mb-3">
-                  Talent & Creative Management
-                </h3>
+                <h3 class="text-uppercase mb-3">Creative Talent Management</h3>
                 <p>
                   We nurture and showcase exceptional talent, managing every
                   aspect of their creative journey. From strategic brand
