added sports management to services

--- a/index.html
+++ b/index.html
@@ -317,14 +317,11 @@
                   Digital Brand Management & Marketing
                 </h3>
                 <p>
-                  We enhance your organization's digital footprint through
-                  strategic optimization. Our services encompass sophisticated
-                  social media campaigns and reputation management. We craft
-                  bespoke solutions to establish and amplify your brand's
-                  distinct identity online. Leveraging data-driven insights and
-                  industry best practices, we ensure your brand message
-                  resonates across digital platforms, driving engagement and
-                  growth.
+                  We optimize your organization's online presence through
+                  strategic social media campaigns and reputation management.
+                  Our data-driven, customized solutions establish and amplify
+                  your brand's unique digital identity, ensuring your message
+                  resonates across platforms to drive engagement and growth.
                 </p>
               </div>
             </div>
@@ -364,12 +361,14 @@
                 <i class="fas fa-bullhorn text-primary fa-2x"></i>
               </div>
               <div class="ps-4">
-                <h3 class="text-uppercase mb-3">Campaign Strategy</h3>
+                <h3 class="text-uppercase mb-3">Sports Management</h3>
                 <p>
-                  We design and execute impactful marketing campaigns that
-                  deliver your message to the right audience with precision and
-                  creativity, driving meaningful engagement and measurable
-                  results.
+                  We provide comprehensive football agent services, focusing on
+                  contract negotiations, brand development, and data-driven
+                  marketing. We optimize athletes' careers through strategic
+                  opportunities, financial advisory, and image management,
+                  allowing clients to concentrate on performance while we drive
+                  their professional growth in the dynamic football industry.
                 </p>
               </div>
             </div>
