modified about us section

--- a/index.html
+++ b/index.html
@@ -229,13 +229,12 @@
               video production, we empower businesses to share their stories
               with impact. Our team of experts collaborates closely with clients
               to understand their unique goals, challenges, and audiences,
-              ensuring every project is tailored to perfection. With a focus on
-              authenticity and creativity, we craft narratives that resonate,
-              evoke emotion, and drive engagement. Leveraging the latest
-              technologies and industry insights, we ensure your brand not only
-              stands out but also establishes a meaningful connection with its
-              audience. In an ever-evolving market, our commitment to innovation
-              and excellence positions your business for lasting success.
+              ensuring every project is tailored to perfection. Leveraging the
+              latest technologies and industry insights, we ensure your brand
+              not only stands out but also establishes a meaningful connection
+              with its audience. In an ever-evolving market, our commitment to
+              innovation and excellence positions your business for lasting
+              success.
             </p>
 
             <div class="row g-4">
